--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "backend:install": "cd python-backend && python3 start.py --install",
+    "backend:start": "cd python-backend && python3 start.py",
+    "dev:full": "concurrently \"npm run backend:start\" \"npm run dev\"",
+    "setup": "npm install && npm run backend:install"
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.3",
@@ -25,6 +29,7 @@
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "autoprefixer": "^10.4.0",
+    "concurrently": "^8.2.2",
     "postcss": "^8.4.0",
     "tailwindcss": "^3.3.0",
     "tsx": "^4.0.0",
